[generator.launch] Refactor generator launch configurations
Instead of assembling command line arguments we load the resources and
call the generator directly. Loading the resources is simple because the
languages and the modelpath are already set up in Eclipse anyway.

Change-Id: Ifadacc33ddb6c6c55d1395d5ebda9408217b7b86